--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^6.0.0",
     "mongoose": "^7.4.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "parser": "^0.1.4",
     "path": "^0.12.7",
